CONF: modify gitignore file about vscode

--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,7 @@ env.bak/
 venv.bak/
 
 ### VisualStudioCode ###
-.vscode/*
+*/.vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
