CONF: add ignore setting in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -93,4 +93,8 @@ venv.bak/
 .history
 .ionide
 
+# log directory
+*/logs
+*.log
+
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python
